# ALBATwin-Hub

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: reactor_setup.yaml
data/forcing/: typical_daily_patterns_of_temperature_irradiance_and_evaporation_rates.csv
docs/: ARCHITECTURE.md  HYDROCHEMISTRY.md  MASS_BALANCES.md  MASS_BALANCES_CLOSURE_OF_OXYGEN.md  MASS_BALANCES_CLOSURE_OF_PROTONS.md  MATH_MODEL.md  PRD.md  REFERENCES.md  ROADMAP.md  SIMULATOR_MATH.md  STOICHIOMETRY.md
docs/adrs/: 001-simulation-engine-stack.md  002-stiffness-handling-strategy.md  003-dae-resolution-strategy.md  004-configuration-management.md  005-data-persistence-format.md  006-unit-system-consistency.md  007-elemental-mass-balance-oh-closure.md
docs/development/: DEVLOG.md  TESTING.md
docs/mass_balances/: OH_CLOSURE.md  README.md  balance_of_oxygen_for_rho_14_Aerobic_growth_of_X_AOB_on_NH4+.md  proton_closure_rationale.md  stoichiometric_water_rationale.md
docs/mass_balances/artifacts/: README.md  audit-oxygen-closure-114cell.md  audit-oxygen-proton-closure-114cell.md  audit-si-114cell.md
docs/mass_balances/case-studies/: rho14-aob-oxygen-balance.md
docs/mass_balances/guides/: OH_CLOSURE.md  proton_closure_rationale.md  (+1 more)
docs/notes/: aqueous-acid-base-reaction-enthalpies.md
docs/supporting_informations/: 01_bioprocess_kinetics_rates.md  02_state_variables.md  03_pH_Light_Temperature_and_Oxygen_Dependence.md  SI.1 - 1. Estimation of the light extinction coefficient.md  SI.1 - 2. Correlation between absorption measurements at 680 nm and algal biomass.md  SI.10 Error propagation.md  SI.12 References.md  SI.2 Modelling of uncertainty in measurements.md  SI.3 - Table SI.3.1: ALBA model stoichiometric matrix.md  SI.3 - Table SI.3.2: Stoichiometric coefficient values implemented in the ALBA bioprocesses.md  SI.3 - Table SI.3.3: Stoichiometric coefficient expressions.md  SI.4 Biomass stoichiometry.md  SI.5 Kinetic parameter values.md  SI.6 Explicit chemical equilibria, their dissociation constants with temperature dependence.md  SI.7 Gas-liquid mass transfer.md  SI.8 Sensitivity analysis and calibration strategy.md  SI.9 Parameters uncertainty.md
notebooks/: fig1_forcing_visual_check.ipynb  typical_daily_forcing_fig1.ipynb
scripts/: generate_mass_balances_md.py
src/bioprocess_twin/: __init__.py  stoichiometry_validation.py
tests/: conftest.py
tests/unit/: stoichiometry_mass_balance_shared.py  test_chemistry_stage1.py  test_chemistry_stage2.py  test_chemistry_stage3.py  test_diel_forcing_schedule.py  test_gas_transfer.py  test_hydrochemistry_api.py  test_kinetic_modifiers.py  test_kinetic_parameters.py  test_kinetics.py  test_liquid_ode_rhs.py  test_liquid_rhs_stage6.py  test_reactor.py  test_sanity.py  test_state.py  test_stoichiometry.py  test_stoichiometry_mass_balance_cells.py  test_stoichiometry_oh_closure.py  test_stoichiometry_proton_closure.py
(+19 files in other folders)
