[project]
name = "bioprocess-twin-hub"
version = "0.1.0"
description = "Algae-Bacteria Wastewater Treatment Digital Twin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
